--- a/share/etc/oned.conf
+++ b/share/etc/oned.conf
@@ -666,6 +666,12 @@ VM_RESTRICTED_ATTR = "CONTEXT/FILES"
 VM_RESTRICTED_ATTR = "NIC/MAC"
 VM_RESTRICTED_ATTR = "NIC/VLAN_ID"
 VM_RESTRICTED_ATTR = "NIC/BRIDGE"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/READ_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/WRITE_BYTES_SEC"
+VM_RESTRICTED_ATTR = "DISK/TOTAL_IOPS_SEC"
+VM_RESTRICTED_ATTR = "DISK/READ_IOPS_SEC"
+VM_RESTRICTED_ATTR = "DISK/WRITE_IOPS_SEC"
 
 #VM_RESTRICTED_ATTR = "RANK"
 #VM_RESTRICTED_ATTR = "SCHED_RANK"
